<resources>
    <string name="app_name">GRestauranteAPP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuPerfil">Perfil</string>
    <string name="menuProdutos">Produtos</string>
    <string name="menuPedidos">Pedidos</string>
    <string name="menuContactos">Contactos</string>
    <string name="ndOpen">Abrir</string>
    <string name="ndClose">Fechar</string>
    <string name="actBemVindo">Bem Vindo</string>
    <string name="menuBemvindo">Bem-Vindo</string>
    <string name="noInternet">Não existe ligação à internet</string>
    <string name="contactos">Contactos</string>
    <string name="tv_Horario">08:00 - 23:00</string>
    <string name="tvDeltIngredientes">Ingredientes</string>
    <string name="tvDetNomeProduto">Nome Produto</string>
    <string name="tvDetPreco">12,80</string>
    <string name="tvIP">Endereço IP</string>
    <string name="tvGuardar">Guardar</string>
    <string name="tvHorario">Horario</string>
    <string name="tvGestorRestaurante">Gestor Restaurante</string>
    <string name="tvTipo">Restaurante</string>
    <string name="btnCriarPedido">Criar</string>
    <string name="tvEstadoPreparacao">Preparação</string>
    <string name="tvNpedido">N: 1</string>
    <string name="tvTipoPedido">Nº: 2</string>
    <string name="tvDataHoraPedido">Data hora</string>
    <string name="tvEstadoDetProduto">Em processo</string>
    <string name="tvCategoriaDetProduto">Categoria</string>
    <string name="nome_produto">Nome Produto</string>
    <string name="tvIngredientesDetProduto">Ingredientes</string>
    <string name="tvPrecoDetProduto">12,80</string>
    <string name="tvQuantidadeDetProduto">1</string>
    <string name="btnAtualizarDetProduto">Atualizar</string>
    <string name="btnRemover">Remover</string>
    <string name="tvCategoriaPedProduto">Categoria</string>
    <string name="tvNomeProdutoPedProduto">Nome Produto</string>
    <string name="tvIngredientesPedProduto">Ingredientes</string>
    <string name="tvQuantidadePedProduto">1</string>
    <string name="tvPrecoPedProduto">12,80</string>
    <string name="btnAdicionarPedProduto">Adicionar ao pedido</string>
    <string name="tvCategoriaDetProdFrag">Categoria</string>
    <string name="tvCategoriaListProdutos">Categorias</string>
    <string name="tvLoginBemvindo">Olá, Bem Vindo!</string>
    <string name="tvMesagemLogin">Faça login para continuar</string>
    <string name="cbRelembrar">Relembrar</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegistar">Registar</string>
    <string name="tvMessagemRegistar">Faça o registo para continuar</string>
    <string name="tvBemvindoRegistar">Bem Vindo!</string>
    <string name="tvRegistDadosPEssoais">DADOS PESSOAIS</string>
    <string name="tvNacionalidade">Nacionalidade</string>
    <string name="tvGenero">Género:</string>
    <string name="rbMasculino">Masculino</string>
    <string name="rbFemenino">Feminino</string>
    <string name="tvDadosAcesso">DADOS DE ACESSO</string>
    <string name="edtEmail">Email</string>
    <string name="edtPassword">Password</string>
    <string name="tvRestaurante">Restaurante</string>
    <string name="tvBemvindo">Bem Vindo</string>
    <string name="tvNomeAPelido">Nome Apelido</string>
    <string name="tvMesa">Nºmesa</string>
    <string name="tvItemData">nn / nn / nnnn</string>
    <string name="tvEstadoPedido">Concluido</string>
    <string name="tvItemPrecoPedidoProduto">20,00</string>
    <string name="tvNomeProduto">Burguer</string>
    <string name="tvPrecoItem">Preço</string>
    <string name="tvEstado">Estado</string>
    <string name="btn_itemCar_atualizar">Atualizar</string>
    <string name="btrn_itemCar_remover">Remover</string>
    <string name="tvtakenomepedido">NomePedido</string>
</resources>