<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior ="single">

        <item
            android:id="@+id/nav_bemvindo"
            android:icon="@drawable/ic_home"
            android:title="@string/menuBemvindo" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menuPerfil" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_produto"
            android:title="@string/menuProdutos" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_pedidos"
            android:title="@string/menuPedidos" />
    </group>
    <item android:title="Contactar" >
        <menu >
            <item
                android:id="@+id/nav_contactos"
                android:icon="@drawable/ic_contacto"
                android:title="@string/menuContactos" />
        </menu>
    </item>
</menu>