<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".vistas.DetalhesPedidoProdutoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".9">

        <TextView
            android:id="@+id/tv_PedP_Estado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvEstadoDetProduto"
            android:textColor="@color/gray"
            android:textSize="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/brandon_grotesque_black"
            app:layout_constraintWidth_percent=".4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayoutImgCategoria"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constrainEstado"
        android:background="@drawable/bg_banner"
        android:padding="20dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/img_PedP_ProdutoCategoria"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/bebidas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrainLayoutImgCategoria"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".9">

        <TextView
            android:id="@+id/tv_PedP_ProdutoCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvCategoriaDetProduto"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_PedP_NomeProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nome_produto"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_PedP_ProdutoCategoria"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_PedP_ProdutoIngredientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/tvIngredientesDetProduto"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_PedP_NomeProduto"
            app:layout_constraintVertical_bias="0.144" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constrainQuantidade"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".9">

        <TextView
            android:id="@+id/tv_PedP_Preco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tvPrecoDetProduto"
            android:textColor="@color/gray"
            android:textSize="30dp"
            android:textAlignment="textEnd"
            app:layout_constraintWidth_percent=".3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgvEuro"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_euro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@id/tv_PedP_Preco"
            app:layout_constraintStart_toEndOf="@id/tv_PedP_Preco"
            app:layout_constraintVertical_bias="0.423" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainQuantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAtualizarPedidoProduto"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".9">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvQuantSubtrair"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_PedP_Quantidade">

            <ImageView
                android:id="@+id/imgVSubtrair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_deincrement" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_PedP_Quantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvQuantidadeDetProduto"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvQuantSomar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_PedP_Quantidade">

            <ImageView
                android:id="@+id/imgVSomar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_increment" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAtualizarPedidoProduto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:text="@string/btnAtualizarDetProduto"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btnRemoverPedidoProduto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/btnRemover"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>