<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".vistas.DetalhesItemCarrinhoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_itemCar_Categoria"
        android:layout_width="0dp"
        android:layout_height="170dp"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_banner"
        android:padding="20dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/img_itemCar_ProdutoCategoria"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/bebidas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_itemCar_detalhes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrain_itemCar_Categoria"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".9">

        <TextView
            android:id="@+id/tv_itemCar_categoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvCategoriaDetProduto"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_itemCar_nomeProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nome_produto"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_itemCar_categoria"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_itemCar_ingredientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/tvIngredientesDetProduto"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_itemCar_nomeProduto"
            app:layout_constraintVertical_bias="0.144" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_itemCar_atualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_itemCar_detalhes"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent=".5">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_itemCar_Subtrair"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0">

            <ImageView
                android:id="@+id/imgVSubtrair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_deincrement" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_itemCar_QuantidadePedida"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="1"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/cv_itemCar_Subtrair"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_itemCar_Somar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="13dp"
            android:padding="10dp"
            app:cardCornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_itemCar_QuantidadePedida"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgVSomar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_increment" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_itemCar_Preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvDetPreco"
        android:textAlignment="textEnd"
        android:textColor="@color/gray"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCard"
        app:layout_constraintEnd_toStartOf="@+id/imgvEuro"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:id="@+id/imgv_itemCar_Euro"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:src="@drawable/ic_euro"
        app:layout_constraintBottom_toBottomOf="@+id/tv_itemCar_Preco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_itemCar_Preco"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/btn_itemCar_atualizar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_itemCar_atualizar"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_itemCar_remover"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/btrn_itemCar_remover"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>